<resources>
    <string name="app_name">Play Juegos</string>
    <string name="play_juegos">Play Juegos</string>
    <string name="new_player">NEW PLAYER</string>
    <string name="CHANGE">CHANGE</string>
    <string name="e_mail">E-Mail</string>
    <string name="phone">Phone</string>
    <string name="robotandroid">robotandroid</string>
    <string name="camaradefotos">camaradefotos</string>
    <string name="face">face</string>
    <string name="Name">Name</string>
    <string name="phonectic_name">Phonectic Name</string>
    <string name="nick_name">Nick Name</string>
    <string name="email">EMail</string>
    <string name="action_buscar">BUSCAR</string>
    <string name="action_settings">SETTINGS</string>
    <string name="action_add">ADD</string>
    <string name="preferencies">PREFERENCIES</string>
    <string name="about">ABOUT</string>
    <string name="elige_una_opc">Elige una opción:</string>
    <string name="dragon_fly">Dragon fly</string>
    <string name="hill_climbing_racing">Hill climbing racing</string>
    <string name="pocket_soccer">Pocket soccer</string>
    <string name="radiant_defense">Radiant defense</string>
    <string name="angry_birds">Angry Birds</string>
    <string name="ninja_jump">Ninja Jump</string>
    <string name="search">SEARCH</string>
    <string name="plataformas">Plataformas:</string>
    <string name="ps4">PS4</string>
    <string name="pc">PC</string>
    <string name="xbox">XBOX</string>
    <string name="wii">WII</string>
    <string name="wiiu">WIIU</string>
    <string name="_3ds">3DS</string>
    <string name="x360">X360</string>
    <string name="g_neros">Géneros:</string>
    <string name="estrategia">Estrategia</string>
    <string name="acci_n">Acción</string>
    <string name="disparos">Disparos</string>
    <string name="deportes">Deportes</string>
    <string name="aventura">Aventura</string>
    <string name="simulaci_n">Simulación</string>
    <string name="lucha">Lucha</string>
    <string name="rol">Rol</string>
    <string name="musical">Musical</string>
    <string name="play">PLAY</string>
    <string name="snackbar">El botón se desplaza hacia arriba</string>
    <string-array name="spinner_name">
        <item>Teléfono 1</item>
        <item>Teléfono 2</item>
        <item>Teléfono 3</item>
        <item>Teléfono 4</item>
        <item>Teléfono 5</item>
    </string-array>

</resources>
