<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >
            <LinearLayout
                android:id="@+id/li"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:drawableLeft="@drawable/games_angrybirds"
                    android:text="@string/angry_birds"
                    android:textSize="@dimen/fontSizeMedium" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:drawableLeft="@drawable/games_dragonfly"
                    android:text="@string/dragon_fly"
                    android:textSize="@dimen/fontSizeMedium" />

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:drawableLeft="@drawable/games_hillclimbingracing"
                    android:text="@string/hill_climbing_racing"
                    android:textSize="@dimen/fontSizeMedium" />

                <CheckBox
                    android:id="@+id/checkBox4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:drawableLeft="@drawable/games_radiantdefense"
                    android:text="@string/radiant_defense"
                    android:textSize="@dimen/fontSizeMedium" />


                <CheckBox
                    android:id="@+id/checkBox5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:drawableLeft="@drawable/games_aircontrol"
                    android:text="@string/pocket_soccer"
                    android:textSize="@dimen/fontSizeMedium" />

                <CheckBox
                    android:id="@+id/checkBox6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:drawableLeft="@drawable/games_ninjump"
                    android:text="@string/ninja_jump"
                    android:textSize="@dimen/fontSizeMedium" />


            </LinearLayout>


        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/FAB1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="30dp"
            android:visibility="visible"
            app:srcCompat="@drawable/done"

            />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</LinearLayout>