<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/face"
                    android:src="@drawable/face"></ImageView>

                <!-- He probado así como se ve descomentando lo comentado y exactamente como pone en los apuntes y no se ejecuta el layout, cuando vas a acceder mediante el botón
                     de nuevo jugador la aplicación peta.
                     En el archivo de dependencias también he probado varias cosas, pero al final lo he dejado todo comentado porque no ejecutaba.

                                <android.support.design.widget.TextInputLayout
                                    android:id="@+id/TiLayout_Name"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content">
                -->
                    <EditText
                        android:id="@+id/EditText_Name"
                        android:hint="@string/Name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:autofillHints="no"></EditText>

                <!--</android.support.design.widget.TextInputLayout>-->

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/EditText_PhonecticName"
                    android:hint="@string/phonectic_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="55dp"
                    android:inputType="text"></EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/EditText_NickName"
                    android:hint="@string/nick_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="55dp"
                    android:inputType="text"></EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/camaradefotos"
                    android:src="@drawable/photo"></ImageView>

                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:contentDescription="@string/robotandroid"
                    android:src="@drawable/android"></ImageView>

                <Button
                    android:id="@+id/change"
                    style="@style/EstiloBoton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CHANGE"></Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/phone"
                    android:src="@drawable/phone"></ImageView>




                    <EditText
                        android:id="@+id/EditText_Phone"
                        android:hint="@string/phone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="phone"></EditText>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/action_bar_spinner"
                        android:drawSelectorOnTop="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="55dp"
                        android:layout_gravity="right"
                        android:entries="@array/spinner_name">

                    </Spinner>
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/e_mail"
                    android:src="@drawable/email"></ImageView>

                <EditText
                    android:id="@+id/EditText_EMail"
                    android:hint="@string/email"
                    android:autofillHints="@string/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"></EditText>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>