<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<!--
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="82dp"
            android:layout_marginLeft="82dp"
            android:layout_marginTop="66dp"
            android:layout_marginBottom="87dp"
            android:text="@string/elige_una_opc"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@+id/radioGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="241dp"
            android:layout_height="169dp"
            android:layout_marginBottom="52dp"
            app:layout_constraintBottom_toTopOf="@+id/ratingBar1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/angry_birds" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dragon_fly" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hill_climbing_racing" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pocket_soccer" />

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radiant_defense" />

        </RadioGroup>


        <RatingBar
            android:id="@+id/ratingBar1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/seekBar1"
            app:layout_constraintEnd_toEndOf="@+id/seekBar1"
            app:layout_constraintStart_toStartOf="@+id/seekBar1"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <SeekBar
            android:id="@+id/seekBar1"
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_marginStart="54dp"
            android:layout_marginLeft="54dp"
            android:layout_marginTop="483dp"
            android:layout_marginEnd="54dp"
            android:layout_marginRight="54dp"
            android:layout_marginBottom="54dp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/FAB1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.49"
            tools:visibility="visible" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/FAB1"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="54dp"
            android:layout_marginRight="54dp"
            android:layout_marginBottom="32dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar1"
            app:srcCompat="@drawable/done" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

